[bug] fix no-scroll unwanted horizontal scroll on body

--- a/src/core/scss/partials/_utilities.scss
+++ b/src/core/scss/partials/_utilities.scss
@@ -4,7 +4,7 @@
 .no-transition{transition: none !important;}
 .no-overflow{overflow:hidden;}
 html.no-scroll{ height: 100vh; overflow: hidden;
-  body{overflow-y: scroll;}
+  body{overflow-x: hidden; overflow-y: scroll;}
 }
 
 .hidden,
